--- a/popup/popup.html
+++ b/popup/popup.html
@@ -20,6 +20,12 @@
         <li class="list-group-item">
             <input type="text" id="time-interval" class="form-control input-sm" value="30">
         </li>
+        <li class="list-group-item">
+            当前代理：<span id="show-ip"></span>
+        </li>
+        <li class="list-group-item">
+            代理统计：<span id="count-ip"></span>
+        </li>
 
     </ul>
 </div>
