--- a/popup/popup.html
+++ b/popup/popup.html
@@ -12,19 +12,32 @@
 <body>
 <div class="container" style="min-width: 250px;">
     <ul class="list-group">
-        <li class="list-group-item">
-            <label for="open-flow" class="">
+        <li class="list-group-item" style="padding-left: 30px;">
+            <label class="radio">
+                <input type="radio" name="type" value="2345"> 2345导航
+            </label>
+            <label class="radio">
+                <input type="radio" name="type" value="7654"> 7654导航
+            </label>
+            <label class="radio">
+                <input type="radio" name="type" value="qqsoft"> 腾讯软件管理
+            </label>
+        </li>
+        <li class="list-group-item" style="padding-left: 30px;">
+            <label for="open-flow" class="checkbox">
                 <input type="checkbox" id="open-flow" value="1"> 开启刷流量
             </label>
         </li>
         <li class="list-group-item">
+            <label>时间间隔（s）：</label>
             <input type="text" id="time-interval" class="form-control input-sm" value="30">
         </li>
         <li class="list-group-item">
             当前代理：<span id="show-ip"></span>
         </li>
         <li class="list-group-item">
-            代理统计：<span id="count-ip"></span>
+            代理统计：<span id="count-ip">0</span>
+            <label class="label btn-danger pull-right" id="clear-count">清空</label>
         </li>
 
     </ul>
