--- a/popup/popup.html
+++ b/popup/popup.html
@@ -20,6 +20,9 @@
                 <input type="radio" name="type" value="7654"> 7654导航
             </label>
             <label class="radio">
+                <input type="radio" name="type" value="sougou"> 搜狗导航
+            </label>
+            <label class="radio">
                 <input type="radio" name="type" value="qqsoft"> 腾讯软件管理
             </label>
         </li>
